# COOPERA

./: README  README.md
Modules/Actions/: CMakeLists.txt  CMakeLists.txt.user.2.7pre1
Modules/Actions/include/: Actions.h
Modules/Actions/resources/conf/: actions.ini
Modules/Actions/resources/data/: actions.txt~  turningActions.csv  turningActions.ods
Modules/Actions/src/: Actions.cpp  main.cpp
Modules/BehaviorModule/: CMakeLists.txt
Modules/BehaviorModule/include/: BehaviorModule.h  Configuration.h  Controller.h  Discretizer.h  Evolution.h  Experiment.h  Exploration.h  GraphDefs.h  Hierarchy.h  Info.h  MotorsThread.cpp~  Pose.h  Recorder.h  Sampler.h  Sarsa.h  SerializeTuple.hpp  StateAction.h  UnorderedMapImpl.hpp  boost_serialize_unordered_map.hpp
Modules/BehaviorModule/resources/conf/: Behaviors.ini~  Config (copy).json~  Config.json  Config.json.full~  Config.json~  Configold.json~  base.json~  behaviorModule.ini  behaviorModule.ini~  reset.json  reset.sh~  simpletask.json~  sitdown.json~
Modules/BehaviorModule/resources/data/: predict.csv  qT.dat~  qT.qfile~  reset.sh~  rewards.csv
Modules/BehaviorModule/resources/data/behaviors/: behavior1.txt~  behavior2.txt~  bendleftfoot.txt  bendlefthand.txt  bendlefthand.txt~  bendleftknee.txt  bendrightfoot.txt  bendrighthand.txt  bendrightknee.txt  kickleft.txt~  kickright.txt~  leftfemur.txt~  leftinvkick.txt  leftkick.txt  openleftshoulder.txt~  openrightshoulder.txt  openshoulder.txt~  raiseleftarm.txt~  raiserightarm.txt~  rightfemur.txt  rightfemur.txt~  rightinvkick.txt  rightkick.txt  tiltbackward.txt~  tiltforward.txt~  turnlefthip.txt~  turnrighthip.txt~
Modules/BehaviorModule/resources/data/check/: faceup.txt  sideleft.txt  sideleft.txt~  sideright.txt  sideright.txt~
Modules/BehaviorModule/resources/data/descents/: facedown.txt  facedown.txt~  faceup.testtask.txt  faceup.txt
Modules/BehaviorModule/resources/data/macros/: OpenShoulders.txt~  bendfeet.txt~  bendhands.txt  bendhands.txt~  bendknees.txt  bendknees.txt~  femurs.txt~  (+9 more)
Modules/BehaviorModule/src/: BehaviorModule.cpp  Controller.cpp  Discretizer.cpp  Experiment.cpp  Info.cpp  Pose.cpp  Sarsa.cpp  StateAction.cpp  main.cpp
Modules/Encoders/: CMakeLists.txt  CMakeLists.txt.user.2.7pre1
Modules/Encoders/include/: Encoders.h
Modules/Encoders/resources/conf/: encoders.ini
Modules/Encoders/resources/data/: .directory  encoders.txt  encoders.txt~  readings.txt  readings.txt~
Modules/Encoders/src/: Encoders.cpp  main.cpp
Modules/MotorsController/: CMakeLists.txt  turning
Modules/MotorsController/include/: Configuration.h  Experiment.h  Exploration.h  MotorsController.h  Pose.h  Sampler.h  Sarsa.h  SharedInfo.h
Modules/MotorsController/resources/conf/: .directory  Config.json  Config.json~  motorsController.ini~
Modules/MotorsController/resources/data/: facedown.txt  faceup.txt  home.txt  predict.csv  sideleft.txt  sideright.txt  standupfacedown.txt  standupfaceup.txt  train.csv
Modules/MotorsController/src/: Experiment.cpp  MotorsController.cpp  Pose.cpp  Sarsa.cpp  main.cpp
Modules/Planner/: CMakeLists.txt  CMakeLists.txt.user.2.7pre1  Planner.cbp
Modules/Planner/Metric-FF-v2.1/: lex.fct_pddl.c  lex.ops_pddl.c  main.cpp  scan-fct_pddl.tab.c  scan-ops_pddl.tab.c
Modules/Planner/include/: Planner.h
Modules/Planner/resources/conf/: planner.ini
Modules/Planner/resources/data/: domain.pddl  plan.txt  problem.pddl
Modules/Planner/src/: Planner.cpp  main.cpp
Modules/SarsaLearner/: CMakeLists.txt
Modules/SarsaLearner/include/: Configuration.h  Experiment.h  Exploration.h  Sampler.h  Sarsa.h  SarsaLearner.h  StatesActions.h
Modules/SarsaLearner/overall/data_10/: Config.json  obstacles.txt  obstacles0.txt  obstacles1.txt  obstacles2.txt  obstacles3.txt  obstacles4.txt  obstacles5.txt  obstacles6.txt  obstacles7.txt  obstacles8.txt  obstacles9.txt  qT0.qfile  qT1.qfile  qT2.qfile  qT3.qfile  qT4.qfile  qT5.qfile  qT6.qfile  qT7.qfile  qT8.qfile  qT9.qfile
Modules/SarsaLearner/overall/data_20/: obstacles.txt  obstacles0.txt  obstacles1.txt  obstacles2.txt  obstacles3.txt  obstacles4.txt  obstacles5.txt  obstacles6.txt  obstacles7.txt  obstacles8.txt  obstacles9.txt  qT0.qfile  qT1.qfile  qT2.qfile  qT3.qfile  qT4.qfile  qT5.qfile  qT6.qfile  qT7.qfile  qT8.qfile  qT9.qfile
Modules/SarsaLearner/overall/data_50/: obstacles0.txt  obstacles1.txt  obstacles2.txt  obstacles3.txt  obstacles4.txt  obstacles5.txt  obstacles6.txt  obstacles7.txt  obstacles8.txt  obstacles9.txt  qT0.qfile  qT1.qfile  qT2.qfile  qT3.qfile  qT4.qfile  qT5.qfile  qT6.qfile  qT7.qfile  qT8.qfile  qT9.qfile
Modules/SarsaLearner/resources/conf/: Config.json  Config.json.save  Config.json.save.1
Modules/SarsaLearner/resources/data/: qT0.qfile  rewards.csv
Modules/SarsaLearner/src/: Configuration.cpp  Experiment.cpp  Sarsa.cpp  SarsaLearner.cpp  main.cpp
Modules/SarsaPolicy/: CMakeLists.txt
Modules/SarsaPolicy/include/: Configuration.h  Experiment.h  Exploration.h  Sarsa.h
Modules/SarsaPolicy/resources/conf/: Config.json
Modules/SarsaPolicy/resources/data/: rewards.csv
Modules/SarsaPolicy/src/: Experiment.cpp  Sarsa.cpp  main.cpp
Modules/Sensors/: CMakeLists.txt  CMakeLists.txt~
Modules/Sensors/include/: Sensors.h  Spatials.h~
Modules/Sensors/resources/conf/: sensors.ini  sensors.ini~
Modules/Sensors/resources/data/: readings.txt~
Modules/Sensors/src/: Sensors.cpp  Sensors.cpp~  main.cpp  main.cpp~
Modules/Torques/: CMakeLists.txt  CMakeLists.txt~
Modules/Torques/include/: Torques.h
Modules/Torques/resources/conf/: encoders.ini~  torques.ini~
Modules/Torques/resources/data/: readings.txt~
Modules/Torques/src/: Torques.cpp  main.cpp
Modules/TrainTorques/: CMakeLists.txt.user.2.7pre1  CMakeLists.txt~
Modules/TrainTorques/include/: TrainTorques.h
Modules/TrainTorques/resources/conf/: trainTorques.ini
Modules/TrainTorques/resources/data/: readings.txt
Modules/TrainTorques/src/: TrainTorques.cpp  main.cpp
Modules/common/: Behaviors.h~  CommonThreads.h~  Hierarchy.h~  LoopThread.h~  MotionThread.h~  SharedInfo.h~
(+4 files in other folders)
